sensors in index

--- a/sensors_hub/lib/sensors_hub_web/templates/page/index.html.eex
+++ b/sensors_hub/lib/sensors_hub_web/templates/page/index.html.eex
@@ -34,3 +34,10 @@
     </ul>
   </div>
 </div>
+<ul>
+  <%= for hydration <- @hydrations do %>
+    <li>
+      Hydration sensor: <b><%= hydration.sensor_name %></b> reported <%= hydration.value %> at <%= hydration.measured_at %> </br>
+    </li>
+  <% end %>
+</ul>
