--- a/sensors_hub/lib/sensors_hub_web/templates/layout/app.html.eex
+++ b/sensors_hub/lib/sensors_hub_web/templates/layout/app.html.eex
@@ -31,5 +31,6 @@
 
     </div> <!-- /container -->
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <script src="<%= static_path(@conn, "/js/plotly-1.30.1.min.js") %>"></script>
   </body>
 </html>
