added sample chart

--- a/sensors_hub/lib/sensors_hub_web/templates/page/index.html.eex
+++ b/sensors_hub/lib/sensors_hub_web/templates/page/index.html.eex
@@ -34,6 +34,7 @@
     </ul>
   </div>
 </div>
+<canvas id="myChart" width="400" height="400"></canvas>
 <ul>
   <%= for hydration <- @hydrations do %>
     <li>
