--- a/sensors_hub/lib/sensors_hub_web/templates/page/index.html.eex
+++ b/sensors_hub/lib/sensors_hub_web/templates/page/index.html.eex
@@ -1,3 +1,11 @@
+<image src="<%= static_path(@conn, "/images/dry.png") %>" height="200" width="200"/>
+<image src="<%= static_path(@conn, "/images/water.png") %>" height="200" width="200"/>
+<image src="<%= static_path(@conn, "/images/heat.png") %>" height="200" width="200"/>
+<image src="<%= static_path(@conn, "/images/warning.png") %>" height="200" width="200"/>
+<image src="<%= static_path(@conn, "/images/safety.png") %>" height="200" width="200"/>
+<br />
+<image src="<%= static_path(@conn, "/images/marijuana.png") %>" height="400" width="400"/>
+<br />
 <canvas id="hydro" width="400" height="400"></canvas>
 <canvas id="humidities" width="400" height="400"></canvas>
 <script>var ctx1 = document.getElementById("hydro");
