--- a/sensors_hub/assets/css/app.css
+++ b/sensors_hub/assets/css/app.css
@@ -1,1 +1,9 @@
 /* This file is for your main application css. */
+#block_container
+{
+    text-align:center;
+}
+#block1, #block2
+{
+    display:inline;
+}
